# QMessages

./: AUTHORS  ChangeLog.rst  MANIFEST.in  README.rst  setup.cfg
QMessages.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
qmessages/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
qmessages/migrations/: 0001_initial.py  0002_auto_20231206_1725.py  0003_alter_message_receiver_alter_message_sender.py
qmessages/templates/: message_delete.html  message_detail.html  message_list.html  message_reply_create.html  message_reply_detail.html  message_update.html  reply_list.html
