[metadata]
name = QMessages
version = 0.00.2
url = https://qloudyx.pt
author = Victor Costa
author_email = victor.costa@qloudyx.pt
description = A Django app for storing and retrieving notes.
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Environment :: Web Environment
    Topic :: Internet
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
project_urls =
    Source = https://github.com/dev-qloudyx/qimob
    
[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false

install_requires =
    Django >= 3.2
